[package]
name = "livecount"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-std = "1"
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
futures-timer = "3"
futures-util = "0.3"
hyper = { version = "1.7.0", features = ["http1", "http2"] }
lazy_static = "1.4"
log = "0.4"
prometheus = "0.13"
rustls = "0.23"
rustls-pemfile = "2"
stderrlog = "0.5"
tokio = { version = "1", features = ["full"]}
tokio-rustls = "0.26"
warp = { version = "0.3", features = ["tls"] }
#tokio = { version = "1", features = ["full"] }
#warp = "0.2"
#serde = {version = "1.0", features = ["derive"] }
#serde_json = "1.0"
#futures = "0"
#futures-util = { version = "0.3", default-features = false, features = ["sink"] }
#uuid = { version = "0.4", features = ["serde", "v4"] }

[profile.release]
overflow-checks = true
