[package]
name = "livecount"
version = "0.2.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-std = "1"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
futures-timer = "3"
futures-util = "0.3"
hyper = { version = "1", features = ["http1", "http2"] }
lazy_static = "1.4"
log = "0.4"
prometheus = "0.14"
rustls = "0.23"
rustls-pemfile = "2"
stderrlog = "0.6"
tokio = { version = "1", features = ["full"]}
tokio-rustls = "0.26"
warp = { version = "0.3", features = ["tls"] }

[profile.release]
overflow-checks = true
